# SimpleFvm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
simplefvm/: CMakeLists.txt
simplefvm/cmake/: CompilerSettings.cmake
simplefvm/include/simplefvm/: libQuadMeshSolver
simplefvm/include/simplefvm/public/: AlgorithmChooserModule.h  FluidPropsModule.h  MSolverMacros.h  PartTypeChooserModule.h  QmSolver.h  ResidualsSettingsModule.h  SchemeChooserModule.h  SleSolverChooserModule.h
simplefvm/src/: AlgorithmChooserModule.cpp  CMakeLists.txt  FluidPropsModule.cpp  FvmSolver.cpp  FvmSolver.h  PartTypeChooserModule.cpp  QmSolver.cpp  ResidualsSettingsModule.cpp  SchemeChooserModule.cpp  SleSolverChooserModule.cpp  SolverAlgorithmChooser.cpp  SolverAlgorithmChooser.h  SolverFVMSolver.cpp  SolverFVMSolver.h  SolverFluidPropsDefiner.cpp  SolverFluidPropsDefiner.h  SolverMeshLoader.cpp  SolverMeshLoader.h  SolverPartTypeChooser.cpp  SolverPartTypeChooser.h  SolverResidualsSettingsDefiner.cpp  SolverResidualsSettingsDefiner.h  SolverResultsSaver.cpp  SolverResultsSaver.h  SolverSchemeChooser.cpp  SolverSchemeChooser.h  SolverSleSolverChooser.cpp  SolverSleSolverChooser.h
simplefvm/src/CustomExceptions/: BoundaryConditionsException.cpp  BoundaryConditionsException.h  CMakeLists.txt  DomainPartsException.cpp  DomainPartsException.h  FluidPropertiesEcxeption.cpp  FluidPropertiesEcxeption.h  MeshLoadStateException.cpp  MeshLoadStateException.h  PreparatoryOperationsException.cpp  PreparatoryOperationsException.h  SleSolverException.cpp  SleSolverException.h  SolverSettingsException.cpp  SolverSettingsException.h
simplefvm/src/DataStores/: CMakeLists.txt  GlobalDataStores.cpp  GlobalDataStores.h
simplefvm/src/DataStores/AdjCellNumsGlobalStores/: AdjCellGlobalNumsPStore.cpp  AdjCellGlobalNumsPStore.h  AdjCellGlobalNumsUStore.cpp  AdjCellGlobalNumsUStore.h  AdjCellGlobalNumsVStore.cpp  AdjCellGlobalNumsVStore.h  CMakeLists.txt
simplefvm/src/DataStores/AdjCellsTypeStores/: AdjCellsTypeStore.cpp  AdjCellsTypeStore.h  CMakeLists.txt
simplefvm/src/DataStores/Adt/: ArrayAdt.cpp  CMakeLists.txt  MapAdt.cpp  MatrixAdt.cpp
simplefvm/src/DataStores/CellNumsGlobalStores/: CMakeLists.txt  CellNumsGlobalStore.cpp  CellNumsGlobalStore.h
simplefvm/src/DataStores/CellNumsInteriorStores/: AdjCellInteriorNumsPStore.cpp  AdjCellInteriorNumsPStore.h  AdjCellInteriorNumsUStore.cpp  AdjCellInteriorNumsUStore.h  AdjCellInteriorNumsVStore.cpp  AdjCellInteriorNumsVStore.h  CMakeLists.txt  CellNumsInteriorStore.cpp  CellNumsInteriorStore.h
simplefvm/src/DataStores/FieldsStores/: CMakeLists.txt  FieldsStore.cpp  FieldsStore.h
simplefvm/src/DataStores/FluidPropertiesStores/: CMakeLists.txt  FluidPropertiesStore.cpp  FluidPropertiesStore.h
simplefvm/src/DataStores/MeshInformationStore/: CMakeLists.txt  MeshInfoStore.cpp  MeshInfoStore.h
simplefvm/src/DataStores/MeshParametersStores/: CMakeLists.txt  MeshParametersStore.cpp  MeshParametersStore.h
simplefvm/src/DataStores/ResultsDataStores/: CMakeLists.txt  MeshBuildingStore.cpp  MeshBuildingStore.h
simplefvm/src/DataStores/StateFlags/: CMakeLists.txt  SolverStateFlagsStore.cpp
simplefvm/src/FVMSolver/: CMakeLists.txt  Solver.cpp  Solver.h  SolverConfiguration.cpp  SolverConfiguration.h
simplefvm/src/FVMSolver/BoundaryConditions/: BcManager.cpp  BcManager.h  CMakeLists.txt  PartsTypeInfo.cpp  PartsTypeInfo.h
simplefvm/src/FVMSolver/CoeffsCalculators/: CMakeLists.txt  CoeffsCalculatorBuilder.h  CoeffsCalculatorCreator.cpp  CoeffsCalculatorCreator.h  CoeffsCalculatorPressureBuilder.cpp  CoeffsCalculatorPressureBuilder.h  CoeffsCalculatorVelocityBuilder.cpp  CoeffsCalculatorVelocityBuilder.h
simplefvm/src/FVMSolver/CoeffsPartsCommon/: CMakeLists.txt  CoeffsPartsCommonCreator.cpp  CoeffsPartsCommonCreator.h
simplefvm/src/FVMSolver/CoeffsPartsPressure/: CMakeLists.txt  CoeffsPartsPressureCreator.cpp  CoeffsPartsPressureCreator.h
simplefvm/src/FVMSolver/CoeffsPartsVelocity/: CMakeLists.txt  CoeffsPartsVelocityCreator.cpp  CoeffsPartsVelocityCreator.h
simplefvm/src/FVMSolver/DataReciever/: CMakeLists.txt  DataManager.cpp  DataManager.h  SolverSetsOfMasks.cpp  SolverSetsOfMasks.h  SolverSingleMasks.cpp  SolverSingleMasks.h
simplefvm/src/FVMSolver/FieldsCorrection/: AbstractFieldCorrector.cpp  AbstractFieldCorrector.h  CMakeLists.txt  FieldCorrector.cpp  FieldCorrector.h  FieldCorrectorP.cpp  FieldCorrectorP.h  FieldCorrectorPPort.cpp  FieldCorrectorPPort.h  FieldCorrectorPorts.cpp  FieldCorrectorPorts.h  FieldCorrectorSets.cpp  FieldCorrectorSets.h  FieldCorrectorU.cpp  FieldCorrectorU.h  FieldCorrectorUPort.cpp  FieldCorrectorUPort.h  FieldCorrectorV.cpp  FieldCorrectorV.h  FieldCorrectorVPort.cpp  FieldCorrectorVPort.h  FieldsCorrectorsCreator.cpp  FieldsCorrectorsCreator.h
simplefvm/src/FVMSolver/FieldsInterpolation/: CMakeLists.txt  FieldInterpolator.cpp  FieldInterpolator.h  FieldInterpolatorPorts.cpp  FieldInterpolatorPorts.h  FieldInterpolatorSets.cpp  FieldInterpolatorSets.h  FieldInterpolatorU.cpp  FieldInterpolatorU.h  FieldInterpolatorUPort.cpp  FieldInterpolatorUPort.h  FieldInterpolatorV.cpp  FieldInterpolatorV.h  FieldInterpolatorVPort.cpp  FieldInterpolatorVPort.h  FieldsInterpolatorsCreator.cpp  FieldsInterpolatorsCreator.h  IFieldInterpolator.h
simplefvm/src/FVMSolver/MathToolsReciever/: CMakeLists.txt
simplefvm/src/MathTools/: CMakeLists.txt
simplefvm/src/MeshLoader/: CMakeLists.txt  Loader.cpp  Loader.h  MeshBuildingDataCollector.cpp  MeshBuildingDataCollector.h
simplefvm/src/PlatformDependentCode/: CMakeLists.txt  ConsoleTextColor.cpp  ConsoleTextColor.h
simplefvm/src/ResultsSaver/: CMakeLists.txt  IResultsSaver.h  Saver.cpp  Saver.h
simplefvm/tests/: CMakeLists.txt
simplefvm/tests/FVMSolver_Test/: CMakeLists.txt
simplefvm/tests/IntegrationTests/: CMakeLists.txt  MeshQuad20x20Test.cpp  MeshQuadEmptyQuadCenter20x27Test.cpp  MeshQuadHorizFaces22x19Test.cpp  MeshQuadVertFaces21x23Test.cpp  main.cpp
simplefvm/tests/SingleIntegrationTest/: CMakeLists.txt  MeshQuad20x20Test.cpp
(+622 files in other folders)
