cmake_minimum_required(VERSION 3.11.2 FATAL_ERROR)

message(STATUS "CMake version ${CMAKE_VERSION}")


# Options
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE TRUE)
set(CMAKE_INCLUDE_CURRENT_DIR ON)


# Output directories
if (NOT MSVC)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build/bin)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build/lib)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build/lib)
endif()


set(PROJECT_ROOT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})


add_subdirectory(simplefvm)